# raku-Dan-Polars

./: .gitignore  Build.pm  Dockerfile  Expr_TODOs.md  META6.json  Query_TODOs.md  README.md  V004_DOCS.md
.github/workflows/: polars-weekly.yaml
apply/: Cargo.toml
apply/src/: apply-template.rs  apply.rs
dan/: Cargo.toml
dan/src/: apply-template.rs  apply.rs  lib.rs  lib.rs.template
lib/.precomp/3C94A37611148BCCE8C1E863C489B91A6A9444E7/24/: 240DFEFA5E9599844EDB88F24FA112D995D9C2DA.repo-id
lib/.precomp/3C94A37611148BCCE8C1E863C489B91A6A9444E7/46/: 46B64F76C1E78201D2F9867A69427C1AC43F73BA  46B64F76C1E78201D2F9867A69427C1AC43F73BA.repo-id
lib/Dan/: .Polars.rakumod.swp  Polars.rakumod  dan-rs.raku
lib/Dan/Polars/: .Containers.rakumod.swp  Containers.rakumod
resources/test_data/: dfStarwarsFilms.csv
spike/: .add_client.raku.swp
spike/add_dll/: Cargo.toml
spike/add_dll/src/: add.rs
spike2/pl_so/: Cargo.toml
spike2/pl_so/src/: main.rs  main.rsOLD  main.rsOLD2  main.rsOLD3
spike3/: add_client.raku  add_client.rakuOLD
spike4/: add_client.raku  dan-rs.raku  user.raku
spike4/add_dll/src/: add.rs
spike4/dan/: Cargo.toml
spike4/dan-polars/: Cargo.toml
spike4/dan-polars/src/: lib.rs  main.rs
spike4/dan/src/: lib.rs
spike4/spike/: add_client.raku
spike5/: Cargo.toml
spike5/src/: main.rs
t/: .08-poo.t.swp  01-ser.rakutest  01-ser.t  02-dfr.rakutest  02-dfr.t  03-dfo.rakutest  03-dfo.t  04-upd.t  05-spo.rakutest  06-dpo.rakutest  06-dpo.t  07-qpo.t  08-poo.rakutest  08-poo.t
t/xt/: 07-qpo.t
xt/: 07-qpo.rakutest
(+1 files in other folders)
