[package]
name = "apply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
polars = {version = "0.22.1", features = ["lazy", "dtype-struct"]}
ffi-convert = "0.5.0"
libloading = "*"

[lib]
name = "apply"
path = "src/apply.rs"
crate-type = ["cdylib"]
