[package]
name = "apply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.148"
polars = {version = "0.33.2", features = ["lazy", "dtype-struct"]}
ffi-convert = "0.6.1"
libloading = "*"

[lib]
name = "apply"
path = "src/apply.rs"
crate-type = ["cdylib"]
