[package]
name = "dan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
polars = {version = "0.22.1", features = ["lazy"]}
ffi-convert = "0.5.0"

[lib]
name = "dan"
path = "src/lib.rs"
crate-type = ["cdylib"]
